[package]
name = "compy"
version = "0.1.0"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
glob = "0.3.0"
is_executable = "0.1.2"
pgs-files = "0.0.7"

[lib]
name = "compyrs"
path = "src/lib.rs"

[[bin]]
name = "compy"
path = "src/bin.rs"
