[package]
name = "compy"
version = "0.0.1"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aneeshdurg/compy"
repository = "https://github.com/aneeshdurg/compy"
description = "Shell agnostic command completion - a rust implementation of compgen"
keywords = ["shell", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
glob = "0.3.0"
hostfile = "0.2.0"
is_executable = "0.1.2"
pgs-files = "0.0.7"
servicefile = "0.3.0"
users = "0.10.0"

[lib]
name = "compyrs"
path = "src/lib.rs"

[[bin]]
name = "compy"
path = "src/bin.rs"
